2000-05-31  Dan Winship  <danw@helixcode.com>

	* mail-format.c (free_url, handle_text_enriched,
	get_url_for_icon): Fix up memory management of x-evolution-data
	URLs so the URLs and/or their data don't get freed while there are
	still references to them.

	* message-list.c (message_list_init_header): redo the (unused)
	online status column to no longer refer to pixmaps that no longer
	exist.

2000-06-01  Ettore Perazzoli  <ettore@helixcode.com>

	* folder-browser-factory.c (control_activate): Put the toolbar
	into a frame to make it look like standard GNOME toolbars.  Also,
	set `GNOME_DOCK_ITEM_BEH_NEVER_VERTICAL' so that it does not do
	evil things when its moved to the left or the right of the window.

2000-05-31  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c: Configuration dialog now allows 
	adding/editing/deleting of Identities (which leaves
	adding/editing/deleting of sources left to implement).
	The data is also saved when the dialog is exited via 
	the OK button.

2000-05-31  Dan Winship  <danw@helixcode.com>

	* mail-format.c (mail_format_mime_message): Initialize the "urls"
	hash table stored on the message and store cid and other URLs
	there rather than as object data on the message.
	(get_cid): rewrite this a bunch
	(handle_text_enriched): move the code from write_iframe_string()
	into here, since it's the only place that actually needs it.
	(handle_text_html): simplify this a lot. We can use a cid: URL
	here rather than x-evolution-data.
	(get_url_for_icon): New routine to return URLs for icons, and
	cache the results, so we don't have to keep re-reading the icon
	files (and so we can't be spoofed into reading non-icon files).
	(handle_mystery, handle_audio): use get_url_for_icon.

	* mail-display.c (save_data): move the CamelMimePart filename
	extracting code from get_cid to here.
	(on_link_clicked, on_object_requested): Update for cid: changes.
	(on_url_requested): Kill off the kludgy, exploitable x-gnome-icon